# ai_agents

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  TYPING_SETUP.md  pyproject.toml  test_crawl4ai.py  test_typing_violations.py
.github/workflows/: ci.yml
.windsurf/rules/: python.md
.windsurf/workflows/: commit.md  test-and-fix.md
data/: template.tex
data/prompts/: extract_metadata.txt  reduce_length_sys.txt  reduce_length_user.txt  reduce_resume_prompt.txt  reduce_resume_user.txt  tailor_resume_sys.txt  tailoring_rules_default.txt
design_docs/: architecture.md  tasks.md
docs/: multi-generation-scoring-feature.md  tasks.md
prompts/: crawl4ai_plus_gpt_prompt.txt  scrapegraphai_direct_prompt.txt  scrapegraphai_plus_gpt_prompt.txt  sys_prompt_extract_metadata.txt  tailor_resume_llm_prompt.txt  tailor_resume_llm_user_prompt.txt  tailor_resume_sys.txt  tailor_resume_user.txt
src/: main.py  streamlit_app.py
src/common/: __init__.py  database_verifier.py  llm_clients.py  models.py  notion_client.py  notion_service.py  utils.py
src/common/exceptions/: notion_exceptions.py
src/common/models/: __init__.py  notion_database.py  notion_page.py
src/common/schemas/: openai_schema.py
src/common/services/: __init__.py  notion_api_service.py  notion_file_service.py  notion_sync_service.py  openai_service.py
src/core/: __init__.py  config.py  logger.py
src/metadata_extraction/: __init__.py  cache.py  extractor_service.py  models.py  schema_utils.py
src/resume_tailoring/: __init__.py  latex_service.py  models.py  pdf_compiler.py  tailor_service.py
tests/: config_test.py  example_test.py  extractor_service_test.py  llm_clients_test.py  main_test.py  metadata_models_test.py  notion_service_test.py  pdf_compiler_test.py  test_main.py  utils_test.py
tests/common/: __init__.py  test_database_verifier.py  test_llm_clients.py  test_notion_service.py
tests/common/models/: __init__.py  test_notion_database.py  test_notion_page.py
tests/common/services/: __init__.py  test_notion_api_service.py  test_notion_file_service.py  test_notion_sync_service.py  test_openai_service.py
tests/core/: test_config.py  test_logger.py
tests/e2e/: test_end_to_end.py
tests/metadata_extraction/: test_extractor_service.py  test_schema_utils.py
tests/resume_tailoring/: latex_service_test.py  test_latex_service.py  test_pdf_compiler.py
